# riverine

./: .gitignore  CMakeLists.txt  gl.cpp  main.cpp  para_perf.cpp  sph.hpp  tests.ipynb  three_dimension.hpp
py/: real_sph.ipynb  setup.py  sph.ipynb
py/utils/: height_field.py
src/: sph.hpp  test.cpp  three_dimension.hpp
tai/: taichi_colab.ipynb
